<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_upload"
        android:icon="@drawable/ic_vertical_align_top_white_24dp"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>