<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/create_source_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/create_loading_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.pnikosis.materialishprogress.ProgressWheel
                    android:id="@+id/create_loading_progress_wheel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    wheel:matProg_barColor="@color/colorAccent"
                    wheel:matProg_progressIndeterminate="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/now_loading_img"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/create_source_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter" />

            <devilsen.me.emojicreator.widget.DrawEdxtView
                android:id="@+id/create_source_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_ticker"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/add_text"
                android:textColor="@color/black"
                android:textSize="@dimen/tick_txt_size"
                android:visibility="gone" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center">

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/create_font_size_sb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/create_select_color_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clipToPadding="false"
                android:gravity="center"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:visibility="gone" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/create_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/create_source_bottombar_pad_bot">

            <CheckBox
                android:id="@+id/create_paint_size_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="@dimen/create_source_bottom_dra_pad"
                android:drawableTop="@mipmap/ic_format_shapes_black_24dp"
                android:gravity="center"
                android:text="@string/create_font_size"
                android:enabled="false"
                android:textColor="@color/create_check_color"
                android:textSize="@dimen/create_source_bottom_txt_size" />

            <CheckBox
                android:id="@+id/create_paint_color_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="@dimen/create_source_bottom_dra_pad"
                android:drawableTop="@mipmap/ic_color_lens_black_24dp"
                android:gravity="center"
                android:text="@string/create_font_color"
                android:enabled="false"
                android:textColor="@color/create_check_color"
                android:textSize="@dimen/create_source_bottom_txt_size" />

            <Button
                android:id="@+id/create_redo_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="@dimen/create_source_bottom_dra_pad"
                android:drawableTop="@mipmap/ic_refresh_black_24dp"
                android:gravity="center"
                android:text="@string/rebuild"
                android:textColor="@color/create_check_color"
                android:textSize="@dimen/create_source_bottom_txt_size"
                android:visibility="gone" />

            <Button
                android:id="@+id/create_done_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:drawablePadding="@dimen/create_source_bottom_dra_pad"
                android:drawableTop="@mipmap/ic_check_black_24dp"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/create_check_color"
                android:textSize="@dimen/create_source_bottom_txt_size" />


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/create_save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="@dimen/create_source_bottom_dra_pad"
                    android:drawableTop="@mipmap/ic_folder_open_black_24dp"
                    android:gravity="center"
                    android:text="@string/save"
                    android:enabled="false"
                    android:textColor="@color/create_check_color"
                    android:textSize="@dimen/create_source_bottom_txt_size"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/progress_wheel_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.pnikosis.materialishprogress.ProgressWheel
                        android:id="@+id/progress_wheel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        wheel:matProg_barColor="@color/colorAccent"
                        wheel:matProg_progressIndeterminate="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/create_source_bottom_dra_pad"
                        android:text="@string/saving"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/create_source_bottom_txt_size" />
                </LinearLayout>

            </FrameLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>